--- a/style.css
+++ b/style.css
@@ -1,148 +1,174 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: url(https://cdn.pixabay.com/photo/2017/05/29/11/16/footprint-2353510_1280.jpg) round;
-    background-size: initial;
+  /* margin: 0; */
+  /* padding: 0; */
+  background: url(https://cdn.pixabay.com/photo/2017/05/29/11/16/footprint-2353510_1280.jpg)
+    round;
+  background-size: initial;
+}
+.bigbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.bigbox2 {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 33%;
+  margin: 15px;
 }
 .box {
-    width: 450px;
-    background: rgba(0, 0, 0, 0.5);
-    padding:40px;
-    text-align: center;
-    margin: auto;
-    margin-top: 45px;
-    border-radius: 40px;
-    color: white;
-    font-family: 'Century Gothic', sans-serif;
+  /* width: 450px; */
+  flex-basis: 33%;
+  margin: 15px;
+  margin-bottom: 750px;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 40px;
+  text-align: center;
+  /* margin: auto; */
+  /* margin-top: 45px; */
+  border-radius: 60px;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
 }
 .box-img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
 }
 .box h1 {
-font-size: 50px;
-letter-spacing: 2px;
-font-weight: 200;
+  font-size: 60px;
+  letter-spacing: 2px;
+  font-weight: 200;
 }
 .box h5 {
-    font-size: 20px;
-    letter-spacing: 1px;
-    font-weight: bold;
-    text-align: center;
+  font-size: 20px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  text-align: center;
 }
 .box p {
-    text-align: justify;
+  text-align: justify;
+  font-size: 20px;
 }
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 30px;
+  padding: 0;
 }
 .box li {
-    display: inline-block;
-    margin: 6px;
-    list-style: none;
+  display: inline-block;
+  margin: 6px;
+  list-style: none;
 }
 .box li a {
-    color: white;
-    text-decoration: none;
-    font-size: 60px;
+  color: white;
+  text-decoration: none;
+  font-size: 60px;
 }
 .box1 {
-    width: 400px;
-    height: 345px;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 40px;
-    text-align: left;
-    margin-left: 110px;
-    margin-top: -600px;
-    border-radius: 40px;
-    color: white;
-    font-family: 'Century Gothic', sans-serif;
+  /* width: 400px; */
+  /* height: 345px; */
+  flex-basis: 33%;
+  margin: 15px;
+  margin-bottom: 1300px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 40px;
+  text-align: left;
+  /* margin-left: 110px; */
+  /* margin-top: -600px; */
+  border-radius: 40px;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
 }
 .box1 h2 {
-    font-size: 45px;
-    letter-spacing: 2px;
-    font-weight: 500;
-    text-align: center;
-    margin-top: 0px;
+  font-size: 45px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 0px;
 }
 .box1 li {
-    text-align: center;
-    display: block;
-    list-style: none;
-    font-size: 19px;
-    word-spacing: 4px;
+  text-align: center;
+  display: block;
+  list-style: none;
+  font-size: 21px;
+  word-spacing: 4px;
 }
 .box2 {
-    width: 400px;
-    height: 210px;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 40px;
-    text-align: right;
-    margin-left: 1335px;
-    margin-top: -620px;
-    border-radius: 40px;
-    color: white;
-    font-family: 'Century Gothic', sans-serif;
+  /* width: 400px; */
+  /* height: 210px; */
+  flex-basis: 33%;
+  margin: 15px;
+  margin-top: 200px;
+  margin-bottom: 500px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 40px;
+  text-align: right;
+  /* margin-left: 1335px; */
+  /* margin-top: -620px; */
+  border-radius: 40px;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
 }
 .box2 h3 {
-    font-size: 30px;
-    letter-spacing: 2px;
-    font-weight: 500;
-    text-align: center;
-    margin-top: 0px;
+  font-size: 30px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 0px;
 }
 .box2 p {
-    text-align: justify;
-    margin-top: -20px;
-    font-size: 17px;
+  text-align: justify;
+  /* margin-top: -20px; */
+  font-size: 17px;
 }
 
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: both;
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: both;
 }
 
-input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-input[type=submit]:hover {
-    background-color: #45a049;
+input[type="submit"]:hover {
+  background-color: #45a049;
 }
 
 .FormBox {
-    border-radius: 30px;
-    background: rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    width: 400px;
-    margin-left: 1355px;
-    margin-top: 50px;
+  border-radius: 30px;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  margin-top: 200px;
+  /* width: 400px; */
+  /* margin-left: 1355px; */
+  /* margin-top: 50px; */
 }
 .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-  }
-  
-  .fa:hover {
-    opacity: 0.7;
-  }
-  .fa-twitter {
-    background: #55ACEE;
-    color: white;
-  }
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
